--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
   "devDependencies": {
     "node-fetch": "^2.6.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "mongodb": "^3.3.0-beta2",
+    "pg": "^7.12.0"
+  }
 }
