--- a/package.json
+++ b/package.json
@@ -1,13 +1,20 @@
 {
   "name": "word-challenges-api",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "license": "MIT",
+  "scripts": {
+    "dev": "NODE_ENV=development nodemon server.js",
+    "start": "NODE_ENV=production node server.js"
+  },
   "devDependencies": {
-    "node-fetch": "^2.6.0"
+    "node-fetch": "^2.6.0",
+    "nodemon": "^1.19.1"
   },
   "dependencies": {
+    "express": "^4.17.1",
     "mongodb": "^3.3.0-beta2",
+    "mongoose": "^5.6.10",
     "pg": "^7.12.0"
   }
 }
