--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
   "name": "word-challenges-api",
   "version": "1.0.0",
-  "main": "server.js",
+  "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "NODE_ENV=development nodemon server.js",
-    "start": "NODE_ENV=production node server.js"
+    "dev": "nodemon api/server.js",
+    "start": "node api/server.js"
   },
   "devDependencies": {
     "node-fetch": "^2.6.0",
     "nodemon": "^1.19.1"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mongodb": "^3.3.0-beta2",
     "mongoose": "^5.6.10",
