get random rhymes

--- a/now.json
+++ b/now.json
@@ -3,7 +3,8 @@
   "version": 2,
   "builds": [{ "src": "/api/server.js", "use": "@now/node" }],
   "routes": [
-    { "src": "/words", "dest": "/api/server.js" },
+    { "src": "/random-rhymes", "dest": "/api/server.js" },
+    { "src": "/rhymes", "dest": "/api/server.js" },
     { "src": "/", "dest": "/api/server.js" }
   ],
   "env": {
