--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "scripts": {
     "dev": "nodemon api/server.js",
-    "start": "node api/server.js"
+    "start": "node api/server.js",
+    "build": "yarn install && node api/server.js"
   },
   "devDependencies": {
     "node-fetch": "^2.6.0",
