--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "nodemon api/server.js",
     "start": "node api/server.js",
-    "build": "yarn install && node api/server.js"
+    "build": "yarn install"
   },
   "devDependencies": {
     "node-fetch": "^2.6.0",
