--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 node_modules
 dump/
 backup/rhymes-backup.js
+backup/definitions-backup.js
 uri.js
 scripts/definitions/init-definitions-oxford.js
 .now
