--- a/now.json
+++ b/now.json
@@ -8,5 +8,9 @@
     { "src": "/definitions-elo", "dest": "/api/server.js" },
     { "src": "/rhymes-elo", "dest": "/api/server.js" },
     { "src": "/", "dest": "/api/server.js" }
-  ]
+  ],
+  "env": {
+    "MONGODB_URI": "@mongodb_uri",
+    "WORDS_API_KEY": "@words_api_key"
+  }
 }
