--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "lodash": "^4.17.15",
-    "mongodb": "^3.3.0-beta2",
+    "mongodb": "^3.5.2",
     "mongoose": "^5.7.5",
     "pg": "^7.12.0"
   }
