--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 node_modules
 dump/
 scripts/definitions/init-definitions-oxford.js
+scripts/synonyms/init-synonyms-oxford.js
 .env
 ecosystem.config.js
