--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ scripts/definitions/init-definitions-oxford.js
 scripts/synonyms/init-synonyms-oxford.js
 .env
 ecosystem.config.js
+src/push-notifications/keys.js
