--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon api/develop.js",
-    "start": "node api/develop.js"
+    "dev": "nodemon src/develop.js",
+    "start": "node src/develop.js"
   },
   "engines": {
     "node": "12.x"
@@ -15,6 +15,7 @@
     "nodemon": "^2.0.3"
   },
   "dependencies": {
+    "apn": "^2.2.0",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "lodash": "^4.17.15",
