--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,5 @@ dump/
 scripts/definitions/init-definitions-oxford.js
 scripts/synonyms/init-synonyms-oxford.js
 .env
-ecosystem.config.js
 src/push-notifications/keys.js
+keys/
