--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "nodemon src/develop.js",
     "start": "node src/develop.js",
-    "pushnotif": "xcrun simctl push 8B042537-F600-40D2-ABDA-594469ACA79D com.jamiegarner.WordChallenges src/push-notifications/ios/ExamplePush.apns"
+    "pushnotifmanual": "xcrun simctl push 8B042537-F600-40D2-ABDA-594469ACA79D com.jamiegarner.WordChallenges src/push-notifications/ios/DefinitionsPush.apns",
+    "pushnotifscript": "node src/push-notifications/ios/schedule-cron-job.js"
   },
   "engines": {
     "node": "12.x"
@@ -19,6 +20,7 @@
     "apn": "^2.2.0",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "express-validator": "^6.6.1",
     "lodash": "^4.17.15",
     "mongodb": "^3.5.2",
     "mongoose": "^5.7.5",
